# Launcher

./: package.json
public/locales/en/: translation.json
public/locales/es/: translation.json
src/: App.css  App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/common/: mod.rs
src-tauri/src/setup/: mod.rs
src/commands/: system.ts
src/components/: animated-download.tsx  game-settings.tsx  settigns-dialog.tsx  top-bar.tsx
src/components/ui/: button.tsx  dialog.tsx  radio-group.tsx  select.tsx  switch.tsx
src/constants/: store.ts
src/hooks/: useTray.ts
src/lib/: store.ts
~/.tauri/: myapp.key  myapp.key.pub
