[package]
name = "launcher"
version = "0.0.1"
description = "A Tauri App"
authors = ["Daniel Bueno Navarro"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = { version = "2.3.0", features = ["watch"] }
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
lazy_static = "1.5.0"
tauri-plugin-dialog = "2"
tauri-plugin-upload = "2"
tauri-plugin-store = "2"
